feat(api-spring-boot): implement burner token logic and site preview conditions